// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot test 1`] = `
<div
  id="peopleList"
>
  <div
    id="searchBarWrapper"
  >
    <div
      className="input-group rounded-8"
      id="searchBar"
    >
      <div
        id="searchIcon"
      >
        <p
          className="bi bi-search"
          style={
            Object {
              "color": "black",
            }
          }
        />
      </div>
      <input
        className="border-0"
        id="chatSearch"
        onChange={[Function]}
        placeholder="People Search"
        style={
          Object {
            "textAlign": "right",
          }
        }
        type="text"
        value=""
      />
    </div>
  </div>
  <br />
  <div
    id="peopleContainers"
  />
</div>
`;

exports[`snapshot test people 1`] = `
<div
  id="peopleList"
>
  <div
    id="searchBarWrapper"
  >
    <div
      className="input-group rounded-8"
      id="searchBar"
    >
      <div
        id="searchIcon"
      >
        <p
          className="bi bi-search"
          style={
            Object {
              "color": "black",
            }
          }
        />
      </div>
      <input
        className="border-0"
        id="chatSearch"
        onChange={[Function]}
        placeholder="People Search"
        style={
          Object {
            "textAlign": "right",
          }
        }
        type="text"
        value=""
      />
    </div>
  </div>
  <br />
  <div
    id="peopleContainers"
  />
</div>
`;

exports[`snapshot test user 1`] = `
<div
  id="chatWrapper"
>
  <div
    id="peopleContainer"
    style={
      Object {
        "width": "30%",
      }
    }
  >
    <div
      id="peopleList"
    >
      <div
        id="searchBarWrapper"
      >
        <div
          className="input-group rounded-8"
          id="searchBar"
        >
          <div
            id="searchIcon"
          >
            <p
              className="bi bi-search"
              style={
                Object {
                  "color": "black",
                }
              }
            />
          </div>
          <input
            className="border-0"
            id="chatSearch"
            onChange={[Function]}
            placeholder="People Search"
            style={
              Object {
                "textAlign": "right",
              }
            }
            type="text"
            value=""
          />
        </div>
      </div>
      <br />
      <div
        id="peopleContainers"
      />
    </div>
  </div>
  <div
    id="chatWindow"
  >
    <div
      className="flex-row"
      id="chatBar"
    >
      <h3 />
      <p
        className="bi bi-house-fill"
        id="homeIcon"
      />
    </div>
    <div
      id="messages"
    />
    <div
      id="sendWrapper"
    >
      <div
        className="input-group rounded-8"
        id="sendMessageBar"
      >
        <input
          className="border-0"
          id="chatSend"
          style={
            Object {
              "textAlign": "left",
            }
          }
          type="text"
        />
        <button
          onClick={[Function]}
          onSubmit={[Function]}
          type="submit"
        >
          <svg
            className="bi bi-send"
            fill="black"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
